--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,6 +88,7 @@ add_subdirectory(ExampleParticleGravity)
 add_subdirectory(ExampleSnake)
 add_subdirectory(ExampleSnake3D)
 add_subdirectory(ExampleCurves)
+add_subdirectory(ExampleFlowField)
 add_subdirectory(ExampleTextRendering)
 add_subdirectory(ExampleBalloonGame)
 add_subdirectory(ExampleSignedDistanceField)
