Setting the CMAKE_MODULE_PATH

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,6 +80,7 @@ set_target_properties(box2d glad imgui sajson testbed unit_test PROPERTIES FOLDE
 if(WIN32)
   add_subdirectory("Third-Party/portaudio")
 else()
+  set(CMAKE_MODULE_PATH "/opt")
   find_package(portaudio)
 endif()
 include_directories(Third-Party/portaudio/include)
