--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,6 +103,7 @@ add_subdirectory(ExampleCurves)
 add_subdirectory(ExampleFlowField)
 add_subdirectory(ExampleTextRendering)
 add_subdirectory(ExampleBalloonGame)
+add_subdirectory(ExampleSandGame)
 add_subdirectory(ExampleSignedDistanceField)
 add_subdirectory(Example2DPhysicsBallPit)
 add_subdirectory(Example2DPhysicsChainReaction)
