Added two CMake Variables that allow the test projects and example projects to be excluded from the build.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,9 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
+set(BBE_ADD_TEST_PROJECTS    ON CACHE BOOL "If set to OFF, the test projects are not added to the build.")
+set(BBE_ADD_EXAMPLE_PROJECTS ON CACHE BOOL "If set to OFF, the example projects are not added to the build.")
+
 add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
 add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
 
@@ -98,24 +101,28 @@ target_link_libraries(BrotBoxEngine portaudio portaudio_static)
 target_include_directories(BrotBoxEngine PUBLIC "Third-Party/stb")
 target_include_directories(BrotBoxEngine PUBLIC "Third-Party/minimp3")
 
-add_subdirectory(BrotBoxEngineTest)
-add_subdirectory(BrotBoxEngineGTest)
-add_subdirectory(Example3D)
-add_subdirectory(ExampleTerrain)
-add_subdirectory(ExampleMandelbrot)
-add_subdirectory(ExampleMandelbrotShader)
-add_subdirectory(ExampleParticleGravity)
-add_subdirectory(ExampleSnake)
-add_subdirectory(ExampleSnake3D)
-add_subdirectory(ExampleSound)
-add_subdirectory(ExampleCurves)
-add_subdirectory(ExampleFlowField)
-add_subdirectory(ExampleTextRendering)
-add_subdirectory(ExampleBalloonGame)
-add_subdirectory(ExampleSandGame)
-add_subdirectory(ExampleSignedDistanceField)
-add_subdirectory(Example2DPhysicsBallPit)
-add_subdirectory(Example2DPhysicsChainReaction)
-add_subdirectory(ExampleStreamCountdown)
-add_subdirectory(ExampleTemplate)
+if(BBE_ADD_TEST_PROJECTS)
+  add_subdirectory(BrotBoxEngineTest)
+  add_subdirectory(BrotBoxEngineGTest)
+endif()
+if(BBE_ADD_EXAMPLE_PROJECTS)
+  add_subdirectory(Example3D)
+  add_subdirectory(ExampleTerrain)
+  add_subdirectory(ExampleMandelbrot)
+  add_subdirectory(ExampleMandelbrotShader)
+  add_subdirectory(ExampleParticleGravity)
+  add_subdirectory(ExampleSnake)
+  add_subdirectory(ExampleSnake3D)
+  add_subdirectory(ExampleSound)
+  add_subdirectory(ExampleCurves)
+  add_subdirectory(ExampleFlowField)
+  add_subdirectory(ExampleTextRendering)
+  add_subdirectory(ExampleBalloonGame)
+  add_subdirectory(ExampleSandGame)
+  add_subdirectory(ExampleSignedDistanceField)
+  add_subdirectory(Example2DPhysicsBallPit)
+  add_subdirectory(Example2DPhysicsChainReaction)
+  add_subdirectory(ExampleStreamCountdown)
+  add_subdirectory(ExampleTemplate)
+endif()
 
