Added BBE_ADD_AUDIO to CMake. Setting it to OFF, all audio support is removed.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 set(BBE_ADD_TEST_PROJECTS    ON CACHE BOOL "If set to OFF, the test projects are not added to the build.")
 set(BBE_ADD_EXAMPLE_PROJECTS ON CACHE BOOL "If set to OFF, the example projects are not added to the build.")
+set(BBE_ADD_AUDIO            ON CACHE BOOL "If set to OFF, all audio support is stripped from the engine.")
 
 add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
 add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
@@ -89,14 +90,16 @@ include_directories(Third-Party/box2d-master/include)
 target_link_libraries(BrotBoxEngine box2d)
 set_target_properties(box2d glad imgui sajson testbed unit_test PROPERTIES FOLDER box2d)
 
-if(WIN32)
-  add_subdirectory("Third-Party/portaudio")
-else()
-  link_directories("${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/portaudio/_Build")
+if(BBE_ADD_AUDIO)
+  if(WIN32)
+    add_subdirectory("Third-Party/portaudio")
+  else()
+    link_directories("${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/portaudio/_Build")
+  endif()
+  
+  include_directories(Third-Party/portaudio/include)
+  target_link_libraries(BrotBoxEngine portaudio portaudio_static)
 endif()
-
-include_directories(Third-Party/portaudio/include)
-target_link_libraries(BrotBoxEngine portaudio portaudio_static)
 
 target_include_directories(BrotBoxEngine PUBLIC "Third-Party/stb")
 target_include_directories(BrotBoxEngine PUBLIC "Third-Party/minimp3")
@@ -113,7 +116,9 @@ if(BBE_ADD_EXAMPLE_PROJECTS)
   add_subdirectory(ExampleParticleGravity)
   add_subdirectory(ExampleSnake)
   add_subdirectory(ExampleSnake3D)
-  add_subdirectory(ExampleSound)
+  if(BBE_ADD_AUDIO)
+    add_subdirectory(ExampleSound)
+  endif()
   add_subdirectory(ExampleCurves)
   add_subdirectory(ExampleFlowField)
   add_subdirectory(ExampleTextRendering)
