Added ExamplePixelObserver. Shows the usage of both the PixelObserver and the SoundDataSource.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,6 +116,7 @@ if(BBE_ADD_EXAMPLE_PROJECTS)
   add_subdirectory(ExampleMandelbrot)
   add_subdirectory(ExampleMandelbrotShader)
   add_subdirectory(ExampleParticleGravity)
+  add_subdirectory(ExamplePixelObserver)
   add_subdirectory(ExampleSnake)
   add_subdirectory(ExampleSnake3D)
   if(BBE_ADD_AUDIO)
