--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,7 +116,9 @@ if(BBE_ADD_EXAMPLE_PROJECTS)
   add_subdirectory(ExampleMandelbrot)
   add_subdirectory(ExampleMandelbrotShader)
   add_subdirectory(ExampleParticleGravity)
-  add_subdirectory(ExamplePixelObserver)
+  if(BBE_ADD_AUDIO)
+    add_subdirectory(ExamplePixelObserver)
+  endif()
   add_subdirectory(ExampleSnake)
   add_subdirectory(ExampleSnake3D)
   if(BBE_ADD_AUDIO)
