Added ExampleSoundDataSource. Shows how the bbe::SoundDataSource can be utilized to generate sounds on the fly. Also added a quick and dirty ExampleWaveDrawer. Might be helpful to someone, but one should probably not have a too close look at it ;-)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,10 +123,12 @@ if(BBE_ADD_EXAMPLE_PROJECTS)
   add_subdirectory(ExampleSnake3D)
   if(BBE_ADD_AUDIO)
     add_subdirectory(ExampleSound)
+    add_subdirectory(ExampleSoundDataSource)
   endif()
   add_subdirectory(ExampleCurves)
   add_subdirectory(ExampleFlowField)
   add_subdirectory(ExampleTextRendering)
+  add_subdirectory(ExampleWaveDrawer)
   add_subdirectory(ExampleBalloonGame)
   add_subdirectory(ExampleSandGame)
   add_subdirectory(ExampleSignedDistanceField)
