--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,6 +130,7 @@ if(BBE_ADD_EXAMPLE_PROJECTS)
   add_subdirectory(ExampleTextRendering)
   add_subdirectory(ExampleWaveDrawer)
   add_subdirectory(ExampleBalloonGame)
+  add_subdirectory(ExampleConvexHull)
   add_subdirectory(ExampleSandGame)
   add_subdirectory(ExampleSignedDistanceField)
   add_subdirectory(Example2DPhysicsBallPit)
