Implemented a very naive Cube::approach method which allows us to move a cube towards another cube.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,6 +119,7 @@ if(BBE_ADD_EXAMPLE_PROJECTS)
   if(BBE_ADD_AUDIO)
     add_subdirectory(ExamplePixelObserver)
   endif()
+  add_subdirectory(ExampleRotatingCubeIntersections)
   add_subdirectory(ExampleRotatingRectangleIntersections)
   add_subdirectory(ExampleSnake)
   add_subdirectory(ExampleSnake3D)
