Added new Example: Particle Life

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,6 +116,7 @@ if(BBE_ADD_EXAMPLE_PROJECTS)
   add_subdirectory(ExampleMandelbrot)
   add_subdirectory(ExampleMandelbrotShader)
   add_subdirectory(ExampleParticleGravity)
+  add_subdirectory(ExampleParticleLife)
   if(BBE_ADD_AUDIO)
     add_subdirectory(ExamplePixelObserver)
   endif()
