--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,6 +131,7 @@ if(BBE_ADD_EXAMPLE_PROJECTS)
   add_subdirectory(ExampleCurves)
   add_subdirectory(ExampleDoublePendulum)
   add_subdirectory(ExampleFlowField)
+  add_subdirectory(ExampleFluidSimulation)
   add_subdirectory(ExampleTextRendering)
   add_subdirectory(ExampleWaveDrawer)
   add_subdirectory(ExampleBalloonGame)
