Added example Divergence

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -129,6 +129,7 @@ if(BBE_ADD_EXAMPLE_PROJECTS)
     add_subdirectory(ExampleSoundDataSource)
   endif()
   add_subdirectory(ExampleCurves)
+  add_subdirectory(ExampleDivergence)
   add_subdirectory(ExampleDoublePendulum)
   add_subdirectory(ExampleFlowField)
   add_subdirectory(ExampleFluidSimulation)
