Alphabetically sorted Example projects (and added missing Tesseract game).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,8 +111,16 @@ if(BBE_ADD_TEST_PROJECTS)
   add_subdirectory(BrotBoxEngineGTest)
 endif()
 if(BBE_ADD_EXAMPLE_PROJECTS)
+  add_subdirectory(Example2DPhysicsBallPit)
+  add_subdirectory(Example2DPhysicsChainReaction)
   add_subdirectory(Example3D)
-  add_subdirectory(ExampleTerrain)
+  add_subdirectory(ExampleBalloonGame)
+  add_subdirectory(ExampleConvexHull)
+  add_subdirectory(ExampleCurves)
+  add_subdirectory(ExampleDivergence)
+  add_subdirectory(ExampleDoublePendulum)
+  add_subdirectory(ExampleFlowField)
+  add_subdirectory(ExampleFluidSimulation)
   add_subdirectory(ExampleMandelbrot)
   add_subdirectory(ExampleMandelbrotShader)
   add_subdirectory(ExampleParticleGravity)
@@ -122,26 +130,19 @@ if(BBE_ADD_EXAMPLE_PROJECTS)
   endif()
   add_subdirectory(ExampleRotatingCubeIntersections)
   add_subdirectory(ExampleRotatingRectangleIntersections)
+  add_subdirectory(ExampleSandGame)
+  add_subdirectory(ExampleSignedDistanceField)
   add_subdirectory(ExampleSnake)
   add_subdirectory(ExampleSnake3D)
   if(BBE_ADD_AUDIO)
     add_subdirectory(ExampleSound)
     add_subdirectory(ExampleSoundDataSource)
   endif()
-  add_subdirectory(ExampleCurves)
-  add_subdirectory(ExampleDivergence)
-  add_subdirectory(ExampleDoublePendulum)
-  add_subdirectory(ExampleFlowField)
-  add_subdirectory(ExampleFluidSimulation)
-  add_subdirectory(ExampleTextRendering)
-  add_subdirectory(ExampleWaveDrawer)
-  add_subdirectory(ExampleBalloonGame)
-  add_subdirectory(ExampleConvexHull)
-  add_subdirectory(ExampleSandGame)
-  add_subdirectory(ExampleSignedDistanceField)
-  add_subdirectory(Example2DPhysicsBallPit)
-  add_subdirectory(Example2DPhysicsChainReaction)
   add_subdirectory(ExampleStreamCountdown)
   add_subdirectory(ExampleTemplate)
+  add_subdirectory(ExampleTerrain)
+  add_subdirectory(ExampleTesseract)
+  add_subdirectory(ExampleTextRendering)
+  add_subdirectory(ExampleWaveDrawer)
 endif()
 
