--- a/BrotBoxEngine/CMakeLists.txt
+++ b/BrotBoxEngine/CMakeLists.txt
@@ -7,6 +7,15 @@ target_include_directories(BrotBoxEngine PUBLIC .)
 
 set(outputCpp "#include \"BBE/List.h\"\n#include \"EmbedOutput.h\"\n\n")
 set(outputH "#include \"BBE/List.h\"\n\n")
+set(warningMsg "")
+string(APPEND warningMsg "// **********************************************************************************************\n")
+string(APPEND warningMsg "// ***                                     !!!WARNING!!!                                      ***\n")
+string(APPEND warningMsg "// *** WARNING: AUTO GENERATED FILE! DO NOT MODIFY BY HAND! YOUR CHANGES WILL BE OVERWRITTEN! ***\n")
+string(APPEND warningMsg "// ***                                     !!!WARNING!!!                                      ***\n")
+string(APPEND warningMsg "// **********************************************************************************************\n\n\n\n")
+string(APPEND outputCpp ${warningMsg})
+string(APPEND outputH ${warningMsg})
+
 foreach(filename frag2DImage;frag2DPrimitive;frag3DPrimitive;frag3DTerrain;tesc3DTerrain;tese3DTerrain;vert2DPrimitive;vert3DPrimitive;vert3DTerrain)
   file(READ ${filename}.spv contents HEX)
   string(APPEND outputH "extern const bbe::List<unsigned char> ${filename}\;\n")
