--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,6 +123,7 @@ if(BBE_ADD_EXAMPLE_PROJECTS)
   add_subdirectory(ExampleMandelbrotShader)
   add_subdirectory(ExampleParticleGravity)
   add_subdirectory(ExampleParticleLife)
+  add_subdirectory(ExamplePendulumChaosShader)
   if(BBE_ADD_AUDIO)
     add_subdirectory(ExamplePixelObserver)
   endif()
