--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,6 +88,14 @@ include_directories(Third-Party/box2d-master/include)
 target_link_libraries(BrotBoxEngine box2d)
 set_target_properties(box2d glad imgui sajson testbed unit_test PROPERTIES FOLDER box2d)
 
+set(BUILD_CURL_EXE OFF CACHE BOOL "" FORCE)
+if(WIN32)
+  set(CMAKE_USE_SCHANNEL ON CACHE BOOL "" FORCE)
+endif()
+add_subdirectory(Third-Party/curl-7.77.0)
+target_link_libraries(BrotBoxEngine libcurl)
+include_directories(Third-Party/curl-7.77.0/include)
+
 if(BBE_ADD_AUDIO)
   if(WIN32)
     add_subdirectory("Third-Party/portaudio")
