--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -132,6 +132,7 @@ if(BBE_ADD_EXAMPLE_PROJECTS)
   add_subdirectory(ExampleFluidSimulation)
   add_subdirectory(ExampleMandelbrot)
   add_subdirectory(ExampleMandelbrotShader)
+  add_subdirectory(ExampleMandelbrotSIMD)
   add_subdirectory(ExampleNeuralRocket)
   add_subdirectory(ExampleParticleGravity)
   add_subdirectory(ExampleParticleLife)
