Further NullRenderer development.

--- a/BrotBoxEngine/CMakeLists.txt
+++ b/BrotBoxEngine/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_subdirectory(BBE)
-add_subdirectory(Vulkan)
+if(BBE_RENDER_MODE STREQUAL "Vulkan")
+  add_subdirectory(Vulkan)
+endif()
 
 file(GLOB local_src CONFIGURE_DEPENDS "*.cpp")
 target_sources(BrotBoxEngine PRIVATE "${local_src}")
