--- a/BrotBoxEngine/BBE/CMakeLists.txt
+++ b/BrotBoxEngine/BBE/CMakeLists.txt
@@ -1,4 +1,6 @@
-add_subdirectory(Vulkan)
+if(BBE_RENDER_MODE STREQUAL "Vulkan")
+  add_subdirectory(Vulkan)
+endif()
 
 file(GLOB local_src CONFIGURE_DEPENDS "*.h")
 target_sources(BrotBoxEngine PRIVATE "${local_src}")
