--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(BBE_ADD_TEST_PROJECTS    ON CACHE BOOL "If set to OFF, the test projects are
 set(BBE_ADD_EXAMPLE_PROJECTS ON CACHE BOOL "If set to OFF, the example projects are not added to the build.")
 set(BBE_ADD_AUDIO            ON CACHE BOOL "If set to OFF, all audio support is stripped from the engine.")
 
-set(BBE_RENDER_MODE "Vulkan" CACHE STRING "Sets the render mode. Possible values are Vulkan, Null")
+set(BBE_RENDER_MODE "Vulkan" CACHE STRING "Sets the render mode. Possible values are Vulkan, NullRenderer")
 
 add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
 add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
@@ -73,13 +73,16 @@ if(BBE_RENDER_MODE STREQUAL "Vulkan")
   target_include_directories(BrotBoxEngine PUBLIC Vulkan::Vulkan)
   target_link_libraries(BrotBoxEngine Vulkan::Vulkan)
   target_compile_definitions(BrotBoxEngine PUBLIC GLFW_INCLUDE_VULKAN)
+  target_compile_definitions(BrotBoxEngine PUBLIC BBE_RENDERER_VULKAN)
+  target_sources(BrotBoxEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/imgui-master/backends/imgui_impl_glfw.cpp)
+  target_sources(BrotBoxEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/imgui-master/backends/imgui_impl_vulkan.cpp)
   #For the future... maybe
 #elseif(BBE_RENDER_MODE STREQUAL "OpenGL")
   #add_subdirectory(Third-Party/glew-2.1.0/build/cmake)
   #include_directories(Third-Party/glew-2.1.0/include)
   #target_link_libraries(BrotBoxEngine glew_s)
-elseif(BBE_RENDER_MODE STREQUAL "Null")
-  # Do nothing
+elseif(BBE_RENDER_MODE STREQUAL "NullRenderer")
+  target_compile_definitions(BrotBoxEngine PUBLIC BBE_RENDERER_NULL)
 else()
   message(FATAL_ERROR "Unknown BBE_RENDER_MODE: ${BBE_RENDER_MODE}")
 endif()
@@ -88,8 +91,6 @@ add_subdirectory(Third-Party/glfw-3.3.2)
 include_directories(Third-Party/glfw-3.3.2/include)
 target_link_libraries(BrotBoxEngine glfw ${GLFW_LIBRARIES})
 
-target_sources(BrotBoxEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/imgui-master/backends/imgui_impl_glfw.cpp)
-target_sources(BrotBoxEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/imgui-master/backends/imgui_impl_vulkan.cpp)
 target_sources(BrotBoxEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/imgui-master/imgui.cpp)
 target_sources(BrotBoxEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/imgui-master/imgui_draw.cpp)
 target_sources(BrotBoxEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/imgui-master/imgui_demo.cpp)
