Added ExampleSimplePresentation as experimental.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(BBE_ADD_TEST_PROJECTS    ON CACHE BOOL "If set to OFF, the test projects are not added to the build.")
 set(BBE_ADD_EXAMPLE_PROJECTS ON CACHE BOOL "If set to OFF, the example projects are not added to the build.")
 set(BBE_ADD_AUDIO            ON CACHE BOOL "If set to OFF, all audio support is stripped from the engine.")
+set(BBE_ADD_EXPERIMENTAL     OFF CACHE BOOL "If set to ON, Experimental projects are added.")
 
 set(BBE_RENDER_MODE "Vulkan" CACHE STRING "Sets the render mode. Possible values are Vulkan, NullRenderer")
 
@@ -158,6 +159,9 @@ if(BBE_ADD_EXAMPLE_PROJECTS)
   add_subdirectory(ExampleRotatingCubeIntersections)
   add_subdirectory(ExampleRotatingRectangleIntersections)
   add_subdirectory(ExampleSandGame)
+  if(BBE_ADD_EXPERIMENTAL)
+    add_subdirectory(ExampleSimplePresentation)
+  endif()
   add_subdirectory(ExampleSignedDistanceField)
   add_subdirectory(ExampleSnake)
   add_subdirectory(ExampleSnake3D)
