NullRenderer is now compilable and runnable with ExampleTemplate.

--- a/BrotBoxEngine/BBE/CMakeLists.txt
+++ b/BrotBoxEngine/BBE/CMakeLists.txt
@@ -1,5 +1,7 @@
 if(BBE_RENDER_MODE STREQUAL "Vulkan")
   add_subdirectory(Vulkan)
+elseif(BBE_RENDER_MODE STREQUAL "NullRenderer")
+  add_subdirectory(NullRenderer)
 endif()
 
 file(GLOB local_src CONFIGURE_DEPENDS "*.h")
