--- a/BrotBoxEngine/CMakeLists.txt
+++ b/BrotBoxEngine/CMakeLists.txt
@@ -1,6 +1,8 @@
 add_subdirectory(BBE)
 if(BBE_RENDER_MODE STREQUAL "Vulkan")
   add_subdirectory(Vulkan)
+elseif(BBE_RENDER_MODE STREQUAL "NullRenderer")
+  add_subdirectory(NullRenderer)
 endif()
 
 file(GLOB local_src CONFIGURE_DEPENDS "*.cpp")
