--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -15,6 +15,7 @@ add_subdirectory(ExampleNeuralRocket)
 add_subdirectory(ExampleParticleGravity)
 add_subdirectory(ExampleParticleLife)
 add_subdirectory(ExamplePendulumChaosShader)
+add_subdirectory(ExamplePhasmophobiaCheatSheet)
 if(BBE_ADD_AUDIO)
   add_subdirectory(ExamplePixelObserver)
 endif()
