Adding ExampleTerrain only when Vulkan is selected.

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -34,7 +34,9 @@ if(BBE_ADD_AUDIO)
 endif()
 add_subdirectory(ExampleStreamCountdown)
 add_subdirectory(ExampleTemplate)
-add_subdirectory(ExampleTerrain)
+if(BBE_RENDER_MODE STREQUAL "Vulkan")
+  add_subdirectory(ExampleTerrain)
+endif()
 add_subdirectory(ExampleTesseract)
 add_subdirectory(ExampleTextRendering)
 add_subdirectory(ExampleWaveDrawer)
