Excluded more Examples if the renderer isn't vulkan.

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -9,12 +9,16 @@ add_subdirectory(ExampleDoublePendulum)
 add_subdirectory(ExampleFlowField)
 add_subdirectory(ExampleFluidSimulation)
 add_subdirectory(ExampleMandelbrot)
-add_subdirectory(ExampleMandelbrotShader)
+if(BBE_RENDER_MODE STREQUAL "Vulkan") # Shaders are Renderer specific
+  add_subdirectory(ExampleMandelbrotShader)
+endif()
 add_subdirectory(ExampleMandelbrotSIMD)
 add_subdirectory(ExampleNeuralRocket)
 add_subdirectory(ExampleParticleGravity)
 add_subdirectory(ExampleParticleLife)
-add_subdirectory(ExamplePendulumChaosShader)
+if(BBE_RENDER_MODE STREQUAL "Vulkan") # Shaders are Renderer specific
+  add_subdirectory(ExamplePendulumChaosShader)
+endif()
 add_subdirectory(ExamplePhasmophobiaCheatSheet)
 if(BBE_ADD_AUDIO)
   add_subdirectory(ExamplePixelObserver)
@@ -25,7 +29,9 @@ add_subdirectory(ExampleSandGame)
 if(BBE_ADD_EXPERIMENTAL)
   add_subdirectory(ExampleSimplePresentation)
 endif()
-add_subdirectory(ExampleSignedDistanceField)
+if(BBE_RENDER_MODE STREQUAL "Vulkan") # Shaders are Renderer specific
+  add_subdirectory(ExampleSignedDistanceField)
+endif()
 add_subdirectory(ExampleSnake)
 add_subdirectory(ExampleSnake3D)
 if(BBE_ADD_AUDIO)
@@ -34,7 +40,7 @@ if(BBE_ADD_AUDIO)
 endif()
 add_subdirectory(ExampleStreamCountdown)
 add_subdirectory(ExampleTemplate)
-if(BBE_RENDER_MODE STREQUAL "Vulkan")
+if(BBE_RENDER_MODE STREQUAL "Vulkan") # Terrain currently only works on Vulkan
   add_subdirectory(ExampleTerrain)
 endif()
 add_subdirectory(ExampleTesseract)
