Added a highly rudimentary and experimental OpenGL RenderManager

--- a/BrotBoxEngine/CMakeLists.txt
+++ b/BrotBoxEngine/CMakeLists.txt
@@ -3,6 +3,8 @@ if(BBE_RENDER_MODE STREQUAL "Vulkan")
   add_subdirectory(Vulkan)
 elseif(BBE_RENDER_MODE STREQUAL "NullRenderer")
   add_subdirectory(NullRenderer)
+elseif(BBE_RENDER_MODE STREQUAL "OpenGL")
+  add_subdirectory(OpenGL)
 endif()
 
 file(GLOB local_src CONFIGURE_DEPENDS "*.cpp")
