--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(BBE_ADD_EXAMPLE_PROJECTS ON CACHE BOOL "If set to OFF, the example projects 
 set(BBE_ADD_AUDIO            ON CACHE BOOL "If set to OFF, all audio support is stripped from the engine.")
 set(BBE_ADD_EXPERIMENTAL     OFF CACHE BOOL "If set to ON, Experimental projects are added.")
 
-set(BBE_RENDER_MODE "Vulkan" CACHE STRING "Sets the render mode. Possible values are Vulkan, NullRenderer")
+set(BBE_RENDER_MODE "Vulkan" CACHE STRING "Sets the render mode. Possible values are Vulkan, OpenGL, NullRenderer")
 
 add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
 add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
@@ -76,11 +76,11 @@ if(BBE_RENDER_MODE STREQUAL "Vulkan")
   target_compile_definitions(BrotBoxEngine PUBLIC GLFW_INCLUDE_VULKAN)
   target_compile_definitions(BrotBoxEngine PUBLIC BBE_RENDERER_VULKAN)
   target_sources(BrotBoxEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/imgui-master/backends/imgui_impl_vulkan.cpp)
-  #For the future... maybe
-#elseif(BBE_RENDER_MODE STREQUAL "OpenGL")
-  #add_subdirectory(Third-Party/glew-2.1.0/build/cmake)
-  #include_directories(Third-Party/glew-2.1.0/include)
-  #target_link_libraries(BrotBoxEngine glew_s)
+elseif(BBE_RENDER_MODE STREQUAL "OpenGL")
+  add_subdirectory(Third-Party/glew-2.1.0/build/cmake)
+  include_directories(Third-Party/glew-2.1.0/include)
+  target_link_libraries(BrotBoxEngine glew_s)
+  target_compile_definitions(BrotBoxEngine PUBLIC BBE_RENDERER_OPENGL)
 elseif(BBE_RENDER_MODE STREQUAL "NullRenderer")
   target_compile_definitions(BrotBoxEngine PUBLIC BBE_RENDERER_NULL)
 else()
