The BBE can now be built with Emscripten.

--- a/BrotBoxEngine/CMakeLists.txt
+++ b/BrotBoxEngine/CMakeLists.txt
@@ -3,7 +3,8 @@ if(BBE_RENDER_MODE STREQUAL "Vulkan")
   add_subdirectory(Vulkan)
 elseif(BBE_RENDER_MODE STREQUAL "NullRenderer")
   add_subdirectory(NullRenderer)
-elseif(BBE_RENDER_MODE STREQUAL "OpenGL")
+elseif(BBE_RENDER_MODE STREQUAL "OpenGL"
+    OR BBE_RENDER_MODE STREQUAL "Emscripten")
   add_subdirectory(OpenGL)
 endif()
 
