--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,13 +8,21 @@ set(BBE_ADD_TEST_PROJECTS    ON CACHE BOOL "If set to OFF, the test projects are
 set(BBE_ADD_EXAMPLE_PROJECTS ON CACHE BOOL "If set to OFF, the example projects are not added to the build.")
 set(BBE_ADD_AUDIO            ON CACHE BOOL "If set to OFF, all audio support is stripped from the engine.")
 set(BBE_ADD_EXPERIMENTAL     OFF CACHE BOOL "If set to ON, Experimental projects are added.")
+set(BBE_ADD_CURL             ON CACHE BOOL "If set to OFF, curl is not included.")
 
-set(BBE_RENDER_MODE "Vulkan" CACHE STRING "Sets the render mode. Possible values are Vulkan, OpenGL, NullRenderer")
+set(BBE_RENDER_MODE "Vulkan" CACHE STRING "Sets the render mode. Possible values are Vulkan, OpenGL, Emscripten, NullRenderer")
 
 add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
 add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
 
 project(BrotBoxEngine CXX)
+if(EMSCRIPTEN)
+  set(CMAKE_EXECUTABLE_SUFFIX ".html")
+  set(BBE_RENDER_MODE "Emscripten" CACHE STRING "" FORCE)
+  set(BBE_ADD_CURL OFF CACHE BOOL "" FORCE)
+  set(BBE_ADD_TEST_PROJECTS OFF CACHE BOOL "" FORCE)
+  set(BBE_ADD_AUDIO OFF CACHE BOOL "" FORCE)
+endif()
 
 macro(install_compiled_shaders currProject)
   foreach(shader_path ${compiled_shaders})
@@ -31,6 +39,9 @@ macro(add_trivial_project name)
   target_sources(${name} PUBLIC "${local_src}")
   install_compiled_shaders(${name})
   target_include_directories(${name} PUBLIC .)
+  if(EMSCRIPTEN)
+    set_target_properties(${name} PROPERTIES LINK_FLAGS "-s USE_GLFW=3 -s FULL_ES3=1")
+  endif()
 endmacro()
 
 add_library(BrotBoxEngine STATIC)
@@ -81,6 +92,9 @@ elseif(BBE_RENDER_MODE STREQUAL "OpenGL")
   include_directories(Third-Party/glew-2.1.0/include)
   target_link_libraries(BrotBoxEngine glew_s)
   target_compile_definitions(BrotBoxEngine PUBLIC BBE_RENDERER_OPENGL)
+elseif(BBE_RENDER_MODE STREQUAL "Emscripten")
+  set_target_properties(BrotBoxEngine PROPERTIES LINK_FLAGS "-s USE_GLFW=3 -s FULL_ES3=1")
+  target_compile_definitions(BrotBoxEngine PUBLIC BBE_RENDERER_OPENGL)
 elseif(BBE_RENDER_MODE STREQUAL "NullRenderer")
   target_compile_definitions(BrotBoxEngine PUBLIC BBE_RENDERER_NULL)
 else()
@@ -89,9 +103,12 @@ endif()
 
 target_sources(BrotBoxEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/imgui-master/backends/imgui_impl_glfw.cpp)
 
-add_subdirectory(Third-Party/glfw-3.3.2)
-include_directories(Third-Party/glfw-3.3.2/include)
-target_link_libraries(BrotBoxEngine glfw ${GLFW_LIBRARIES})
+if(EMSCRIPTEN)
+else()
+  add_subdirectory(Third-Party/glfw-3.3.2)
+  include_directories(Third-Party/glfw-3.3.2/include)
+  target_link_libraries(BrotBoxEngine glfw ${GLFW_LIBRARIES})
+endif()
 
 target_sources(BrotBoxEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/imgui-master/imgui.cpp)
 target_sources(BrotBoxEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/imgui-master/imgui_draw.cpp)
@@ -107,14 +124,17 @@ include_directories(Third-Party/box2d-master/include)
 target_link_libraries(BrotBoxEngine box2d)
 set_target_properties(box2d PROPERTIES FOLDER box2d)
 
-set(BUILD_CURL_EXE OFF CACHE BOOL "" FORCE)
-set(CURL_DISABLE_TESTS ON CACHE BOOL "" FORCE)
-if(WIN32)
-  set(CMAKE_USE_SCHANNEL ON CACHE BOOL "" FORCE)
+if(BBE_ADD_CURL)
+  set(BUILD_CURL_EXE OFF CACHE BOOL "" FORCE)
+  set(CURL_DISABLE_TESTS ON CACHE BOOL "" FORCE)
+  if(WIN32)
+    set(CMAKE_USE_SCHANNEL ON CACHE BOOL "" FORCE)
+  endif()
+  add_subdirectory(Third-Party/curl-7.77.0)
+  target_link_libraries(BrotBoxEngine libcurl)
+  include_directories(Third-Party/curl-7.77.0/include)
+  target_compile_definitions(BrotBoxEngine PUBLIC BBE_ADD_CURL)
 endif()
-add_subdirectory(Third-Party/curl-7.77.0)
-target_link_libraries(BrotBoxEngine libcurl)
-include_directories(Third-Party/curl-7.77.0/include)
 
 if(BBE_ADD_AUDIO)
   if(WIN32)
