--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,6 +92,7 @@ elseif(BBE_RENDER_MODE STREQUAL "OpenGL")
   include_directories(Third-Party/glew-2.1.0/include)
   target_link_libraries(BrotBoxEngine glew_s)
   target_compile_definitions(BrotBoxEngine PUBLIC BBE_RENDERER_OPENGL)
+  target_sources(BrotBoxEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/imgui-master/backends/imgui_impl_opengl3.cpp)
 elseif(BBE_RENDER_MODE STREQUAL "Emscripten")
   set_target_properties(BrotBoxEngine PROPERTIES LINK_FLAGS "-s USE_GLFW=3 -s FULL_ES3=1")
   target_compile_definitions(BrotBoxEngine PUBLIC BBE_RENDERER_OPENGL)
