--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -47,6 +47,9 @@ if(BBE_RENDER_MODE STREQUAL "Vulkan") # Terrain currently only works on Vulkan
 endif()
 add_subdirectory(ExampleTesseract)
 add_subdirectory(ExampleTextRendering)
+if(BBE_ADD_EXPERIMENTAL)
+  add_subdirectory(ExampleVectorField)
+endif()
 add_subdirectory(ExampleWaveDrawer)
 if(BBE_ADD_EXPERIMENTAL)
   add_subdirectory(ExampleWaveFunctionCollapse)
