--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,6 +20,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
+    - name: Install libxinerama
+      # Needed for GLFW
+      run: sudo apt-get install -y libxinerama 
+    
     - name: Setup Vulkan SDK
       uses: humbletim/setup-vulkan-sdk@v1.2.0
       with:
