--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,16 +20,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
-    - name: Install libxinerama
-      # Needed for GLFW
-      run: sudo apt-get install -y libxinerama-dev 
-    
-    - name: Setup Vulkan SDK
-      uses: humbletim/setup-vulkan-sdk@v1.2.0
-      with:
-        vulkan-query-version: 1.3.204.0
-        vulkan-components: Vulkan-Headers, Vulkan-Loader
-        vulkan-use-cache: true
+    - name: Install Dependencies
+      run: sudo apt-get install -y libxinerama-dev freeglut3-dev libvulkan-dev libdmx-dev xorg-dev openssl
      
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
