--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -27,6 +27,14 @@ jobs:
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+   
+    - name: Build Port Audio
+      run: cd Third-Party/portaudio
+           mkdir _Build
+           cd _Build
+           cmake .. -G "Unix Makefiles" -DCMAKE_INSTALL_PREFIX=/opt
+           make
+           make install
 
     - name: Build
       # Build your program with the given configuration
