--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -21,7 +21,7 @@ jobs:
     - uses: actions/checkout@v3
     
     - name: Install Dependencies
-      run: sudo apt-get clean && sudo apt-get update && sudo apt-get install -y libxinerama-dev freeglut3-dev libvulkan-dev libdmx-dev xorg-dev openssl
+      run: sudo apt-get clean && sudo apt-get update && sudo apt-get install --fix-missing -y libxinerama-dev freeglut3-dev libvulkan-dev libdmx-dev xorg-dev openssl
      
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
