Building ExampleMandelbrotSIMD only when we are on windows.

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -18,7 +18,9 @@ add_subdirectory(ExampleMandelbrot)
 if(BBE_RENDER_MODE STREQUAL "Vulkan") # Shaders are Renderer specific
   add_subdirectory(ExampleMandelbrotShader)
 endif()
-add_subdirectory(ExampleMandelbrotSIMD)
+if(WIN32)
+  add_subdirectory(ExampleMandelbrotSIMD)
+endif()
 add_subdirectory(ExampleNeuralRocket)
 add_subdirectory(ExampleParticleGravity)
 add_subdirectory(ExampleParticleLife)
