--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -44,5 +44,5 @@ jobs:
       working-directory: ${{github.workspace}}/build/bin
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ./BrotBoxEngineGTest
+      run: ./BrotBoxEngineGTest && ./BrotBoxEngineTest
 
