--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -36,10 +36,8 @@ jobs:
       run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
    
     - name: Build Port Audio
-      run: cd Third-Party/portaudio
-           && mkdir _Build
-           && cd _Build
-           && cmake .. -G "Unix Makefiles" -DCMAKE_INSTALL_PREFIX=/opt
+      working-directory: ${{github.workspace}}/Third-Party/portaudio/_Build
+      run: cmake .. -G "Unix Makefiles" -DCMAKE_INSTALL_PREFIX=/opt
            && make
            && make install
 
