Using proper target_include_directories

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,7 +89,7 @@ if(BBE_RENDER_MODE STREQUAL "Vulkan")
   target_sources(BrotBoxEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/imgui-master/backends/imgui_impl_vulkan.cpp)
 elseif(BBE_RENDER_MODE STREQUAL "OpenGL")
   add_subdirectory(Third-Party/glew-2.1.0/build/cmake)
-  include_directories(Third-Party/glew-2.1.0/include)
+  target_include_directories(BrotBoxEngine PUBLIC Third-Party/glew-2.1.0/include)
   target_link_libraries(BrotBoxEngine glew_s)
   target_compile_definitions(BrotBoxEngine PUBLIC BBE_RENDERER_OPENGL)
   target_sources(BrotBoxEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/imgui-master/backends/imgui_impl_opengl3.cpp)
