--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -15,6 +15,9 @@ jobs:
     strategy:
       matrix:
         renderer: [Vulkan, OpenGL, NullRenderer]
+        include:
+          - renderer: NullRenderer
+            execDryRuns: 1
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
     # You can convert this to a matrix build if you need cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
@@ -52,9 +55,38 @@ jobs:
 
     - name: Test
       working-directory: ${{github.workspace}}/build/bin
-      # Execute tests defined by the CMake configuration.
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ./BrotBoxEngineGTest && ./BrotBoxEngineTest
+      
+    - name: DryRuns
+      if: ${{ matrix.execDryRuns }}
+      working-directory: ${{github.workspace}}/build/bin
+      run: |
+           ./Example2DPhysicsBallPit
+           ./Example2DPhysicsChainReaction
+           ./Example3D
+           ./ExampleBalloonGame
+           ./ExampleConvexHull
+           ./ExampleCurves
+           ./ExampleDivergence
+           ./ExampleDoublePendulum
+           ./ExampleFlowField
+           ./ExampleMandelbrot
+           ./ExampleNeuralRocket
+           ./ExampleParticleGravity
+           ./ExampleParticleLife
+           ./ExamplePhasmophobiaCheatSheet
+           ./ExampleRotatingCubeIntersections
+           ./ExampleRotatingRectangleIntersections
+           ./ExampleSandGame
+           ./ExampleSnake
+           ./ExampleSnake3D
+           ./ExampleSound
+           ./ExampleSoundDataSource
+           ./ExampleStreamCountdown
+           ./ExampleTemplate
+           ./ExampleTesseract
+           ./ExampleTextRendering
+           ./ExampleWaveDrawer
 
 
   build_emscripten:
