Removed various explicit font usages from example codes. ExampleStreamCountdown is no longer available on none Windows platforms as arial.ttf is pretty much backed into it.

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -46,7 +46,9 @@ if(BBE_ADD_AUDIO)
   add_subdirectory(ExampleSound)
   add_subdirectory(ExampleSoundDataSource)
 endif()
-add_subdirectory(ExampleStreamCountdown)
+if(WIN32)
+  add_subdirectory(ExampleStreamCountdown)
+endif()
 add_subdirectory(ExampleTemplate)
 if(BBE_RENDER_MODE STREQUAL "Vulkan") # Terrain currently only works on Vulkan
   if(BBE_ADD_EXPERIMENTAL)
