Added an experimental example to test the current Fragment related OpenGL Render Bug where the fragment shader gives progressively worse results the further away an object is from the origin.

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -9,6 +9,9 @@ add_subdirectory(ExampleConvexHull)
 add_subdirectory(ExampleCurves)
 add_subdirectory(ExampleDivergence)
 add_subdirectory(ExampleDoublePendulum)
+if(BBE_ADD_EXPERIMENTAL)
+  add_subdirectory(ExampleFarCube)
+endif()
 add_subdirectory(ExampleFlowField)
 add_subdirectory(ExampleFluidSimulation)
 if(BBE_ADD_EXPERIMENTAL)
