Removing examples and tests of GLFW.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,6 +109,8 @@ if(EMSCRIPTEN)
 else()
   include_directories(Third-Party/glfw-3.3.2/include)
   if(NOT BBE_RENDER_MODE STREQUAL "NullRenderer")
+    set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+    set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
     add_subdirectory(Third-Party/glfw-3.3.2)
     target_link_libraries(BrotBoxEngine glfw ${GLFW_LIBRARIES})
   endif()
