Defining GLFW_INCLUDE_NONE globally instead of in file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,6 +99,7 @@ elseif(BBE_RENDER_MODE STREQUAL "Emscripten")
   target_sources(BrotBoxEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/imgui-master/backends/imgui_impl_opengl3.cpp)
 elseif(BBE_RENDER_MODE STREQUAL "NullRenderer")
   target_compile_definitions(BrotBoxEngine PUBLIC BBE_RENDERER_NULL)
+  target_compile_definitions(BrotBoxEngine PUBLIC GLFW_INCLUDE_NONE)
 else()
   message(FATAL_ERROR "Unknown BBE_RENDER_MODE: ${BBE_RENDER_MODE}")
 endif()
